@@ -2413,20 +2413,85 @@ static int is_list_element_cmd (char *list, char *elem, SLwchar_Type *delim_ptr)
 /*}}}*/
 
 /* Regular expression routines for strings */
-static SLRegexp_Type *Regexp;
-static unsigned int Regexp_Match_Byte_Offset;
+#define NUM_CACHED_REGEXP 5
+typedef struct
+{
+   SLRegexp_Type *regexp;
+   char *pattern;
+   unsigned int match_byte_offset;
+}
+Regexp_Type;
+static unsigned int Cache_Indices[NUM_CACHED_REGEXP];
+static Regexp_Type Regexp_Cache[NUM_CACHED_REGEXP];
 
-static int string_match_internal (char *str, char *pat, int n) /*{{{*/
+static int init_regexp_cache (void)
+{
+   unsigned int i;
+
+   for (i = 0; i < NUM_CACHED_REGEXP; i++)
+     Cache_Indices[i] = i;
+
+   return 0;
+}
+
+static Regexp_Type *get_regexp (char *pat)
+{
+   Regexp_Type *r;
+   unsigned int i, j;
+
+   for (i = 0; i < NUM_CACHED_REGEXP; i++)
+     {
+	r = Regexp_Cache + Cache_Indices[i];
+	if (r->pattern != pat) continue; /* slstring comparison */
+
+	if ((r->regexp == NULL)
+	    && (NULL == (r->regexp = SLregexp_compile (pat, 0))))
+	  return NULL;
+
+	goto update_cache_and_return;
+     }
+
+   /* Here, r is set to Regexp_Cache + Cache_Indices[i] */
+
+   SLang_free_slstring (r->pattern);   /* NULL ok */
+   if (NULL == (r->pattern = SLang_create_slstring (pat)))
+     return NULL;
+
+   SLregexp_free (r->regexp);	       /* NULL ok */
+   if (NULL == (r->regexp = SLregexp_compile (pat, 0)))
+     return NULL;
+
+   /* Drop */
+
+update_cache_and_return:
+   i = r - Regexp_Cache;
+   if (i == Cache_Indices[0]) return r;
+
+   j = 1;
+   while (j < NUM_CACHED_REGEXP)
+     {
+	if (i != Cache_Indices[j])
+	  {
+	     j++;
+	     continue;
+	  }
+
+	while (j > 0)
+	  {
+	     Cache_Indices[j] = Cache_Indices[j-1];
+	     j--;
+	  }
+	Cache_Indices[0] = i;
+	break;
+     }
+   return r;
+}
+
+static int string_match_internal (char *str, Regexp_Type *r, int n) /*{{{*/
 {
    char *match;
    size_t len;
    size_t byte_offset;
-
-   if (Regexp != NULL)
-     {
-	SLregexp_free (Regexp);
-	Regexp = NULL;
-     }
 
    byte_offset = (unsigned int) (n - 1);
    len = strlen(str);
@@ -2434,11 +2499,9 @@ static int string_match_internal (char *str, char *pat, int n) /*{{{*/
    if (byte_offset > len)
      return 0;
 
-   if (NULL == (Regexp = SLregexp_compile (pat, 0)))
-     return -1;
-   Regexp_Match_Byte_Offset = byte_offset;
+   r->match_byte_offset = byte_offset;
 
-   if (NULL == (match = SLregexp_match (Regexp, str+byte_offset, len-byte_offset)))
+   if (NULL == (match = SLregexp_match (r->regexp, str+byte_offset, len-byte_offset)))
      return 0;
 
    return 1 + (int) (match - str);
@@ -2469,13 +2532,18 @@ static int pop_string_match_args (int nargs, char **strp, char **patp, int *np)
 
 static int string_match_cmd (void)
 {
+   Regexp_Type *r;
    char *str, *pat;
    int n, status;
 
    if (-1 == pop_string_match_args (SLang_Num_Function_Args, &str, &pat, &n))
      return -1;
 
-   status = string_match_internal (str, pat, n);
+   if (NULL == (r = get_regexp (pat)))
+     status = -1;
+   else
+     status = string_match_internal (str, r, n);
+
    SLang_free_slstring (str);
    SLang_free_slstring (pat);
    return status;
@@ -2484,20 +2552,22 @@ static int string_match_cmd (void)
 static int string_match_nth_cmd (int *nptr) /*{{{*/
 {
    SLuindex_Type ofs, len;
+   Regexp_Type *r;
 
-   if (Regexp == NULL)
+   r = Regexp_Cache + Cache_Indices[0];
+   if (r->regexp == NULL)
      {
 	_pSLang_verror (SL_RunTime_Error, "A successful call to string_match was not made");
 	return -1;
      }
 
-   if (-1 == SLregexp_nth_match (Regexp, (unsigned int) *nptr, &ofs, &len))
+   if (-1 == SLregexp_nth_match (r->regexp, (unsigned int) *nptr, &ofs, &len))
      {
 	_pSLang_verror (0, "SLregexp_nth_match failed");
 	return -1;
      }
 
-   ofs += Regexp_Match_Byte_Offset;
+   ofs += r->match_byte_offset;
 
    /* zero based return value */
    SLang_push_integer((int) ofs);
@@ -2508,15 +2578,19 @@ static int string_match_nth_cmd (int *nptr) /*{{{*/
 
 static int string_matches_internal (char *str, char *pat, int n)
 {
-   int status;
-   SLuindex_Type i;
    SLstrlen_Type lens[10];
    SLstrlen_Type offsets[10];
+   Regexp_Type *r;
    char **strs;
-   SLindex_Type num;
    SLang_Array_Type *at;
+   SLindex_Type num;
+   SLuindex_Type i;
+   int status;
 
-   status = string_match_internal (str, pat, n);
+   if (NULL == (r = get_regexp (pat)))
+     return -1;
+
+   status = string_match_internal (str, r, n);
    if (status <= 0)
      {
 	SLang_push_null ();
@@ -2525,9 +2599,9 @@ static int string_matches_internal (char *str, char *pat, int n)
 
    for (i = 0; i < 10; i++)
      {
-	if (-1 == SLregexp_nth_match (Regexp, i, offsets+i, lens+i))
+	if (-1 == SLregexp_nth_match (r->regexp, i, offsets+i, lens+i))
 	  break;
-	offsets[i] += Regexp_Match_Byte_Offset;
+	offsets[i] += r->match_byte_offset;
      }
 
    num = (SLindex_Type)i;
@@ -3126,5 +3200,7 @@ static SLang_Intrin_Fun_Type Strops_Table [] = /*{{{*/
 
 int _pSLang_init_slstrops (void)
 {
+   if (-1 == init_regexp_cache ()) return -1;
+
    return SLadd_intrin_fun_table (Strops_Table, NULL);
 }
